maintenance work to reduce compiler warnings